# JARVIS

./: .env-example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  commands.yaml  config.yaml  main.py  main.spec  pyproject.toml
ai/: gemini.py
assets/: version.txt
core/: actions.py  assistant.py  command_router.py  commands.py  commands_loader.py  config.py  state.py  stt.py  tts.py  wakeword.py
core/actions/: __init__.py  apps.py  browser.py  cleaner.py  jokes.py  music.py  power.py  screen.py  system.py  time_date.py  volume.py
core/actions/modes/: __init__.py  base.py  gaming.py
core/ai/: gemini.py
docs/: AI_MODE.md  ARCHITECTURE.md  COMMAND_SYSTEM.md  COMPARISON.md  FEATURES.md  README.md  ROADMAP.md  SECURITY.md  VOICE_SYSTEM.md
installer/: inno.iss
